Add room validation and user notification

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,3 +58,13 @@
     font-weight: normal;
     border-radius: 2px;
 }
+
+/* Error box */
+
+.error-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
