--- a/client/src/components/MessagesCatalog/MessagesCatalog.css
+++ b/client/src/components/MessagesCatalog/MessagesCatalog.css
@@ -1,4 +1,4 @@
-/*** Testimonial ***/
+/*** Messages ***/
 .testimonial {
     background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/carousel-2.jpg);
     background-position: center center;
