Update messages styling for lower resolution displays

--- a/client/src/components/MessagesCatalog/MessagesCatalog.css
+++ b/client/src/components/MessagesCatalog/MessagesCatalog.css
@@ -49,5 +49,12 @@
 }
 
 .send-message {
-    width: 50%; 
+    width: 50%;
+}
+
+@media (max-width: 1024px) {
+    .testimonial-carousel {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
