--- a/client/src/components/RoomDetails/WeatherDetails/WeatherDetails.css
+++ b/client/src/components/RoomDetails/WeatherDetails/WeatherDetails.css
@@ -1,3 +1,10 @@
+.loading-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
 .no-weather-container {
     display: flex;
     flex-direction: column;
